--- a/front/css/product.css
+++ b/front/css/product.css
@@ -91,6 +91,11 @@
 	box-shadow: rgba(42, 18, 206, 0.9) 0 0 22px 6px;
 }
 
+.item__content__addButton button:disabled{
+	opacity: 0.3;
+	pointer-events: none;
+}
+
 
 
 
