--- a/front/css/cart.css
+++ b/front/css/cart.css
@@ -133,7 +133,10 @@ h2 {
 .cart__order__form__submit input:hover {
 	box-shadow: rgb(42 18 206 / 90%) 0 0 22px 6px;
 }
-
+.cart__order__form__submit input:disabled{
+	opacity: 0.3;
+	pointer-events: none;
+}
 
 
 /***************/
